--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "express-mongo-typescript-api-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple express typescript boilerplate",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc --project ./tsconfig.json",
-    "start": "cross-env NODE_ENV=dev npm run build && cross-env NODE_ENV=dev node build/index.js",
-    "lint": "npx eslint ./src/*.ts --fix",
-    "test": "cross-env NODE_ENV=test npx tsc --project ./tsconfig.json --noEmit && jest",
+    "build": "tsc --project ./tsconfig.json",
+    "start": "yarn build && node build/index.js",
+    "dev": "nodemon src/index.ts",
+    "lint": "eslint ./src/*.ts",
     "clean": "rm -rf ./build"
   },
   "author": "Chen Wen Kang",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.14",
+    "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.6"
   },
@@ -33,13 +33,9 @@
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.8",
+    "nodemon": "^2.0.13",
     "prettier": "^2.2.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm test"
-    }
   }
 }
