--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,7 @@
         "ecmaVersion": 12
     },
     "plugins": [
-        "@typescript-eslint",
-        "jest"
+        "@typescript-eslint"
     ],
     "rules": {
         "import/extensions": [
