--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc --project ./tsconfig.json",
     "start": "yarn build && node build/index.js",
     "dev": "nodemon src/index.ts",
-    "lint": "eslint ./src/*.ts",
+    "lint": "eslint ./src/**/*.ts",
     "clean": "rm -rf ./build"
   },
   "author": "Chen Wen Kang",
@@ -21,21 +21,20 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
-    "@types/mongoose": "^5.10.3",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.22",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^14.17.19",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.19.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.2",
     "nodemon": "^2.0.13",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.3"
   }
 }
