--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,20 +2,21 @@ default:
   image: node:14.17.5
   cache:
     paths:
-    - node_modules/
-  before_script: 
-    - npm install
+      - node_modules/
+  before_script:
+    - yarn install
 
 test:
   stage: test
-  script: 
-    - npm run test
+  script:
+    - yarn lint
+    - yarn check-format
+    - yarn test
 
 build:
   stage: build
-  script: 
-    - npm run build
-
+  script:
+    - yarn build
 # For gitlab ci deployment
 # deploy-staging:
 #   stage: deploy
@@ -26,8 +27,8 @@ build:
 #     - mkdir -p ~/.ssh
 #     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 #     - npx pm2 deploy ecosystem.config.js staging setup --force 2>&1 || true
-#     - npx pm2 deploy ecosystem.config.js staging --force 
-#   only: 
+#     - npx pm2 deploy ecosystem.config.js staging --force
+#   only:
 #     - staging
 
 # deploy-production:
@@ -39,6 +40,6 @@ build:
 #     - mkdir -p ~/.ssh
 #     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 #     - npx pm2 deploy ecosystem.config.js production setup --force 2>&1 || true
-#     - npx pm2 deploy ecosystem.config.js production --force 
+#     - npx pm2 deploy ecosystem.config.js production --force
 #   only:
 #     - master
