--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "yarn build && node build/index.js",
     "dev": "nodemon src/index.ts",
     "lint": "eslint ./src/**/*.ts",
-    "clean": "rm -rf ./build"
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "clean": "rm -rf ./build",
+    "prepare": "husky install"
   },
   "author": "Chen Wen Kang",
   "license": "MIT",
@@ -31,10 +34,16 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
