--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,9 @@
     ],
     "class-methods-use-this": "off",
     "no-underscore-dangle": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
+    "import/prefer-default-export": "off"
   }
 }
