--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   "author": "Chen Wen Kang",
   "license": "MIT",
   "dependencies": {
+    "@admin-bro/express": "^3.1.0",
+    "@admin-bro/mongoose": "^1.1.0",
+    "admin-bro": "^4.0.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.6"
@@ -28,6 +33,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-formidable": "^1",
+    "@types/express-session": "^1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^14.17.29",
     "@types/swagger-ui-express": "^4.1.3",
